SFDC Automation/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICLastEndTime__c</fullName>
        <label>IC Last EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__ICLastStartTime__c</fullName>
        <label>IC Last StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__ICLastWrapupTime__c</fullName>
        <label>IC Last WrapupTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__ICPassword__c</fullName>
        <label>IC Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__ICReportAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IC Report Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__ICSelectedReportUsers__c</fullName>
        <label>IC Selected Report Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connection__ICUsername__c</fullName>
        <label>IC Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__IC_Default_Phone__c</fullName>
        <description>IC Campaign Default Phone number</description>
        <label>IC_Default_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Connection__IC_Default_StuffANI__c</fullName>
        <description>ANI to display when using IC</description>
        <label>IC_Default_StuffANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_Code_Charged__c</fullName>
        <description>This is the location code to which the Salesforce licence will be charged.</description>
        <label>Location Code Charged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ride_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ride ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Territory_Code__c</fullName>
        <label>Sales Territory Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>Short description of titles for sales people</description>
        <label>Short Title</label>
        <picklist>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBD-Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAM Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTC_Name__c</fullName>
        <label>UTC Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC__c</fullName>
        <description>This field will capture the location code for the user.</description>
        <label>UTC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <formula>IF(IsActive, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Users_By_Region</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Short_Title__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>Region__c</columns>
        <columns>Sales_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>East,Northeast,Southeast,Southwest,West,Central,Canada</value>
        </filters>
        <label>Active Users By Region</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,SSO System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Short_Title__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>National_Reps</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>National</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>National Reps</label>
    </listViews>
    <listViews>
        <fullName>New_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Short_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/5/2011 12:00 AM</value>
        </filters>
        <label>new users</label>
    </listViews>
    <listViews>
        <fullName>Prod_emails</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>.prod</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>.Prod emails</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <label>Service Users</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>